# sponsorship-crm

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260715_0001_initial.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: endpoints.py  router.py
backend/app/api/v1/endpoints/: __init__.py  audit.py  dashboard.py  discovery.py  drafts.py  import_export.py  organizations.py  templates.py
backend/app/core/: config.py  errors.py  logging.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  crm.py
backend/app/repositories/: base.py  crm_repos.py
backend/app/schemas/: crm.py
backend/app/services/: crawler.py  crm_service.py  email_draft.py  import_export.py  scheduler.py
backend/app/templates/: default_email.txt
backend/tests/: conftest.py
backend/tests/integration/: test_api_workflow.py  test_discovery.py  test_error_paths.py
backend/tests/unit/: test_crawler_service.py  test_crm_service.py  test_email_draft_service.py  test_import_export_service.py  test_scheduler_service.py
docs/: api.md  architecture.md  deployment.md  folder-structure.md  installation.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo
frontend/src/: App.tsx  styles.css
frontend/src/components/: DiscoveryForm.tsx  DraftReviewQueue.tsx  KpiCards.tsx  TemplateManager.tsx
frontend/src/lib/: api.ts
(+1 files in other folders)
