[tool.poetry]
name = "sponsorship-crm-backend"
version = "0.1.0"
description = "Production-grade Sponsorship CRM backend"
authors = ["Sponsorship CRM Team <team@example.org>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.28.0" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.28" }
alembic = "^1.13.1"
pydantic = { extras = ["email"], version = "^2.6.4" }
pydantic-settings = "^2.2.1"
aiosqlite = "^0.20.0"
asyncpg = "^0.29.0"
beautifulsoup4 = "^4.12.3"
playwright = "^1.42.0"
jinja2 = "^3.1.3"
apscheduler = "^3.10.4"
python-multipart = "^0.0.9"
pandas = "^2.2.1"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
httpx = "^0.27.0"
ruff = "^0.3.2"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.pytest.ini_options]
addopts = "--cov=app/services --cov=app/api/v1 --cov=app/repositories --cov-report=term-missing --cov-fail-under=90"
asyncio_mode = "auto"
